--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML Images</title>
   </head>
-  <body>
-    <!-- Your code here -->
-  </body>
+    <body>
+      <img src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+      <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+      alt="lion roaring"/>
+      <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+      alt="lion roaring"
+      title="lion"/>
+
+    </body>
 </html>
